--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-yfinance
-pandas
-pandas-ta
-APScheduler
-Flask
+Flask==3.0.3
+pandas==2.2.2
+pandas-ta==0.3.14b0
+requests==2.32.3
+yfinance==0.2.40
+APScheduler==3.10.4
+
+--- ▼▼▼ 新增的部署用套件 ▼▼▼ ---
+gunicorn==22.0.0
+psycopg2-binary==2.9.9
