--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.0
 gunicorn==22.0.0
 pandas==1.5.3
-pandas-ta==0.3.14b0
+pandas-ta==0.3.14b
 yfinance==0.2.37
 psycopg2-binary==2.9.9
 APScheduler==3.10.4
