--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==3.0.0
+Flask 核心
+Flask==3.0.3
 gunicorn==22.0.0
-pandas==1.5.3
+pandas==2.2.2
 pandas-ta==0.3.14b
-yfinance==0.2.37
+yfinance==0.2.40
 psycopg2-binary==2.9.9
-APScheduler==3.10.4
-requests==2.31.0
