--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.3
 gunicorn==22.0.0
 pandas==2.3.2
 pandas-ta==0.4.67b0
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.9
 requests==2.32.3
 yfinance
 APScheduler
